@@ -4,15 +4,21 @@ import com.google.common.base.Strings;
 import com.google.common.collect.Sets;
 import io.jans.as.client.TokenRequest;
 import io.jans.as.model.common.GrantType;
+import io.jans.as.model.exception.InvalidJwtException;
+import io.jans.as.model.jwt.Jwt;
 import io.jans.ca.plugin.adminui.model.auth.ApiTokenRequest;
 import io.jans.ca.plugin.adminui.model.auth.TokenResponse;
-import io.jans.ca.plugin.adminui.model.config.AUIConfiguration;
 import io.jans.ca.plugin.adminui.model.exception.ApplicationException;
 import io.jans.ca.plugin.adminui.rest.auth.OAuth2Resource;
 import io.jans.ca.plugin.adminui.service.BaseService;
 import io.jans.ca.plugin.adminui.service.config.AUIConfigurationService;
 import io.jans.ca.plugin.adminui.utils.CommonUtils;
 import io.jans.ca.plugin.adminui.utils.ErrorResponse;
+import io.jans.configapi.core.model.adminui.AUIConfiguration;
+import io.jans.configapi.core.model.adminui.AdminUISession;
+import io.jans.orm.PersistenceEntryManager;
+import io.jans.orm.exception.EntryPersistenceException;
+import io.jans.orm.search.filter.Filter;
 import io.jans.service.EncryptionService;
 import jakarta.inject.Inject;
 import jakarta.inject.Singleton;
@@ -21,6 +27,8 @@ import org.slf4j.Logger;
 
 import java.io.UnsupportedEncodingException;
 import java.util.*;
+
+import static io.jans.ca.plugin.adminui.utils.CommonUtils.addMinutes;
 
 @Singleton
 public class OAuth2Service extends BaseService {
@@ -33,19 +41,26 @@ public class OAuth2Service extends BaseService {
     @Inject
     EncryptionService encryptionService;
 
+    @Inject
+    private PersistenceEntryManager entryManager;
+
+    private static final String SID_GET_MSG = "Error in get Admin UI Session by sid: ";
+    private static final String JANS_USR_DN = "jansUsrDN";
+    private static final String SESSION_DN = "ou=adminUISession,ou=admin-ui,o=jans";
+
     /**
-     * The function `getApiProtectionToken` retrieves an API protection token based on the provided parameters and handles
-     * exceptions accordingly.
+     * Obtain an API protection token for the specified application and populate its token claims.
+     * Uses the AUI configuration for the given appType to request a client-credentials token; when an ApiTokenRequest
+     * with a user JWT (ujwt) is provided, the request includes that JWT. The returned TokenResponse contains the
+     * access, ID, and refresh tokens and, when available from token introspection, scopes, issued-at (iat), expiration (exp),
+     * and issuer (iss) claims.
      *
-     * @param apiTokenRequest The `getApiProtectionToken` method is responsible for obtaining an API protection token based
-     * on the provided `ApiTokenRequest` and `appType`. The method first retrieves the necessary configuration from
-     * `auiConfigurationService` based on the `appType`. It then constructs a `TokenRequest` object
-     * @param appType The `appType` parameter in the `getApiProtectionToken` method is used to specify the type of the
-     * application for which the API protection token is being requested. It is passed as a String parameter to the method.
-     * The `appType` parameter helps in determining the specific configuration settings and endpoints
-     * @throws ApplicationException
-     * @return The method `getApiProtectionToken` returns a `TokenResponse` object containing the access token, id token,
-     * refresh token, scopes, iat (issued at) timestamp, exp (expiration) timestamp, and issuer information.
+     * @param apiTokenRequest optional request parameters; when null a default OpenID scope is requested, otherwise the
+     *                        contained `ujwt` (if present) is used to obtain the token
+     * @param appType         identifier of the application configuration to use for token endpoint, client credentials,
+     *                        and introspection endpoint lookup
+     * @return a TokenResponse populated with accessToken, idToken, refreshToken and, if available, scopes, iat, exp, and issuer
+     * @throws ApplicationException on error while obtaining or processing the token
      */
     public TokenResponse getApiProtectionToken(ApiTokenRequest apiTokenRequest, String appType) throws ApplicationException {
         try {
@@ -61,14 +76,14 @@ public class OAuth2Service extends BaseService {
 
             io.jans.as.client.TokenResponse tokenResponse = null;
             if (apiTokenRequest == null) {
-                tokenRequest.setScope(scopeAsString(Arrays.asList(OAuth2Resource.SCOPE_OPENID)));
+                tokenRequest.setScope(scopeAsString(List.of(OAuth2Resource.SCOPE_OPENID)));
                 tokenResponse = getToken(tokenRequest, auiConfiguration.getAuiBackendApiServerTokenEndpoint());
             } else {
                 if (Strings.isNullOrEmpty(apiTokenRequest.getUjwt())) {
                     log.warn(ErrorResponse.USER_INFO_JWT_BLANK.getDescription());
-                    tokenRequest.setScope(scopeAsString(Arrays.asList(OAuth2Resource.SCOPE_OPENID)));
+                    tokenRequest.setScope(scopeAsString(List.of(OAuth2Resource.SCOPE_OPENID)));
                 }
-                tokenResponse = getToken(tokenRequest, auiConfiguration.getAuiBackendApiServerTokenEndpoint(), apiTokenRequest.getUjwt(), apiTokenRequest.getPermissionTag());
+                tokenResponse = getToken(tokenRequest, auiConfiguration.getAuiBackendApiServerTokenEndpoint(), apiTokenRequest.getUjwt());
             }
 
             Optional<Map<String, Object>> introspectionResponse = introspectToken(tokenResponse.getAccessToken(), auiConfiguration.getAuiBackendApiServerIntrospectionEndpoint());
@@ -79,7 +94,7 @@ public class OAuth2Service extends BaseService {
             tokenResp.setIdToken(tokenResponse.getIdToken());
             tokenResp.setRefreshToken(tokenResponse.getRefreshToken());
 
-            if (!introspectionResponse.isPresent()) {
+            if (introspectionResponse.isEmpty()) {
                 return tokenResp;
             }
             final String SCOPE = "scope";
@@ -93,11 +108,11 @@ public class OAuth2Service extends BaseService {
                 }
             }
             if (claims.get("iat") != null) {
-                tokenResp.setIat(Long.valueOf(claims.get("iat").toString()));
+                tokenResp.setIat(Long.parseLong(claims.get("iat").toString()));
             }
 
             if (claims.get("exp") != null) {
-                tokenResp.setExp(Long.valueOf(claims.get("exp").toString()));
+                tokenResp.setExp(Long.parseLong(claims.get("exp").toString()));
             }
 
             if (claims.get("iss") != null) {
@@ -105,18 +120,141 @@ public class OAuth2Service extends BaseService {
             }
 
             return tokenResp;
-        } catch (ApplicationException e) {
-            log.error(ErrorResponse.GET_API_PROTECTION_TOKEN_ERROR.getDescription());
-            throw e;
         } catch (Exception e) {
             log.error(ErrorResponse.GET_API_PROTECTION_TOKEN_ERROR.getDescription(), e);
             throw new ApplicationException(Response.Status.INTERNAL_SERVER_ERROR.getStatusCode(), ErrorResponse.GET_API_PROTECTION_TOKEN_ERROR.getDescription());
         }
     }
 
+    /**
+     * Convert a list of scope values into a URL-encoded space-delimited string with duplicates removed.
+     *
+     * @param scopes the list of scope strings; may contain duplicates
+     * @return a URL-encoded space-delimited string of unique scopes
+     * @throws UnsupportedEncodingException if the required character encoding is not supported during URL-encoding
+     */
     private static String scopeAsString(List<String> scopes) throws UnsupportedEncodingException {
         Set<String> scope = Sets.newHashSet();
         scope.addAll(scopes);
         return CommonUtils.joinAndUrlEncode(scope);
+    }
+
+    /**
+     * Constructs the distinguished name (DN) for an Admin UI session.
+     *
+     * @param sessionId the session identifier (inum) to include in the DN
+     * @return the DN in the form "inum=&lt;sessionId&gt;,ou=adminUISession,ou=admin-ui,o=jans"
+     */
+    private String getDnForSession(String sessionId) {
+        return String.format("inum=%s,%s", sessionId, SESSION_DN);
+    }
+
+    /**
+     * Create and persist an AdminUISession for the given sessionId using claims extracted from the provided user-info JWT.
+     *
+     * @param sessionId the identifier for the admin UI session; used as the session's inum and to build its DN
+     * @param ujwt      the user-info JWT string containing an "inum" claim that identifies the user
+     * @throws ApplicationException if the "inum" claim is missing from the provided JWT
+     */
+    public void setAdminUISession(String sessionId, String ujwt) throws ApplicationException {
+        AUIConfiguration auiConfiguration = auiConfigurationService.getAUIConfiguration();
+        Date currentDate = new Date();
+
+        Jwt tokenJwt = null;
+        try {
+            tokenJwt = Jwt.parse(ujwt);
+        } catch (InvalidJwtException e) {
+            throw new ApplicationException(Response.Status.INTERNAL_SERVER_ERROR.getStatusCode(), "Error in parsing user-info JWT.");
+        }
+        Map<String, Object> claims = CommonUtils.getClaims(tokenJwt);
+        if (claims.get("inum") == null) {
+            throw new ApplicationException(Response.Status.INTERNAL_SERVER_ERROR.getStatusCode(), "The user `inum` claim missing in User-Info JWT");
+        }
+        AdminUISession adminUISession = new AdminUISession();
+        adminUISession.setInum(sessionId);
+        adminUISession.setDn(getDnForSession(sessionId));
+        adminUISession.setSessionId(sessionId);
+        adminUISession.setUjwt(ujwt);
+        adminUISession.setJansUsrDN(getDnForUser((String) claims.get("inum")));
+        adminUISession.setCreationDate(currentDate);
+        adminUISession.setLastUpdated(currentDate);
+        adminUISession.setExpirationDate(addMinutes(currentDate, auiConfiguration.getSessionTimeoutInMins()));
+
+        entryManager.persist(adminUISession);
+    }
+
+    /**
+     * Removes all AdminUISession entries whose jansUsrDN contains the provided user DN.
+     *
+     * @param userDn the user distinguished name to match within stored AdminUISession jansUsrDN values
+     * @throws ApplicationException if an error occurs while searching for or removing sessions (results in HTTP 500)
+     */
+    public void removeAdminUIUserSessionByDn(String userDn) throws ApplicationException {
+        try {
+            Filter userDnFilter = Filter.createEqualityFilter(JANS_USR_DN, userDn);
+            List<AdminUISession> adminUISessions = entryManager.findEntries(SESSION_DN, AdminUISession.class, userDnFilter);
+
+            for (AdminUISession adminUISession : adminUISessions) {
+                entryManager.remove(adminUISession);
+            }
+        } catch (Exception e) {
+            log.error(ErrorResponse.ADMINUI_SESSION_REMOVE_ERROR.getDescription(), e);
+            throw new ApplicationException(Response.Status.INTERNAL_SERVER_ERROR.getStatusCode(), ErrorResponse.ADMINUI_SESSION_REMOVE_ERROR.getDescription());
+        }
+    }
+
+    /**
+     * Load an AdminUISession by its session identifier.
+     *
+     * @param sessionId the session identifier used to build the session DN
+     * @return the matching AdminUISession, or `null` if no session exists for the given id
+     * @throws ApplicationException if an error occurs while retrieving the session (results in HTTP 500)
+     */
+    public AdminUISession getSession(String sessionId) throws ApplicationException {
+        AdminUISession adminUISession = null;
+        try {
+            adminUISession = entryManager
+                    .find(AdminUISession.class, getDnForSession(sessionId));
+        } catch (EntryPersistenceException e) {
+            //do not throw error is the record is not present in database
+            return adminUISession;
+        } catch (Exception ex) {
+            log.error(SID_GET_MSG + "{}", sessionId, ex);
+            throw new ApplicationException(Response.Status.INTERNAL_SERVER_ERROR.getStatusCode(), SID_GET_MSG + sessionId);
+        }
+        return adminUISession;
+    }
+
+    /**
+     * Removes the Admin UI session identified by the given sessionId.
+     *
+     * @param sessionId the Admin UI session identifier
+     * @throws ApplicationException if the session cannot be retrieved or removed
+     */
+    public void removeSession(String sessionId) throws ApplicationException {
+        try {
+            AdminUISession configApiSession = getSession(sessionId);
+            if (configApiSession == null) {
+                log.warn("Session not found for removal: {}", sessionId);
+                return;
+            }
+            entryManager.remove(configApiSession);
+        } catch (Exception e) {
+            log.error("Failed to remove Admin UI session: {}", sessionId, e);
+            throw new ApplicationException(
+                    Response.Status.INTERNAL_SERVER_ERROR.getStatusCode(),
+                    "Failed to remove Admin UI session"
+            );
+        }
+    }
+
+    /**
+     * Build the distinguished name (DN) for a user identified by its inum.
+     *
+     * @param userInum the user's inum identifier
+     * @return the LDAP DN for the user, e.g. "inum={userInum},ou=people,o=jans"
+     */
+    private String getDnForUser(String userInum) {
+        return String.format("inum=%s,%s", userInum, "ou=people,o=jans");
     }
 }
